--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ body{
   color: #fb5686;
 }
 
+.title > * {
+  font-weight: 400;
+}
+
 .exercises {
   background-color: #f8f8f8;
 /*  height: 100vh;*/
@@ -73,4 +77,13 @@ body{
 
 .button:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+footer {
+  font-size: 0.8em;
+  color: dimgray;
+  margin: 1em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
