--- a/style.css
+++ b/style.css
@@ -61,22 +61,51 @@ body{
   left: 0;
   border-radius: 0;
   align-items: center;
+  font-family: 'Rubik', sans-serif;
+}
+
+#timer .timerAction{
+  color: #fb5686;
+  font-size: 49px;
+  font-weight: 600;
+  margin: 60px 0;
+}
+
+#timer .timerSeconds{
+  color: black;
+  font-size: 84px;
+}
+
+#timer .timerNextAction {
+  color: #747474;
+  font-size: 35px;
+  font-weight: 300;
+  text-transform: capitalize;
+}
+
+#pause {
+  width: 290px;
+  height: 290px;
+  margin: 80px 0;
+  font-size: 3.25em;
 }
 
 .button {
   background-color: #fb5686;
   font-size: 1.25em;
+  font-family: sans-serif;
   text-transform: uppercase;
   color: white;
   width: 100px;
   height: 100px;
-  border-radius: 100px;
-  border: 0;
+  border-radius: 50%;
+  border: solid 1px white;
   cursor: pointer;
 }
 
 .button:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 0;
 }
 
 footer {
