--- a/style.css
+++ b/style.css
@@ -107,6 +107,34 @@ body{
   border: 0;
 }
 
+.button-wrap {
+  display: flex; 
+  flex-direction: row; 
+  align-items: center; 
+  justify-content: space-between; 
+  width: 600px;
+}
+
+.skip-button {
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+  height: 100px;
+}
+
+.skip-button:focus {
+  outline-color: pink;
+}
+
+#prev {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23c5c5c5"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+}
+
+#next {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23c5c5c5"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+}
+
 footer {
   font-size: 0.8em;
   color: dimgray;
