--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body{
   max-width: 100%;
   width: 100%;
   height: 100vh;
+  max-height: 100vh;
   margin: 0;
   top:0;
   left: 0;
@@ -64,18 +65,20 @@ body{
 }
 
 #timer .timerAction{
+  flex: 1;
   color: #fb5686;
   font-size: 49px;
   font-weight: 600;
-  margin: 60px 0;
 }
 
 #timer .timerSeconds{
+  flex: 1;
   color: black;
   font-size: 84px;
 }
 
 #timer .timerNextAction {
+  flex: 1;
   color: #747474;
   font-size: 35px;
   font-weight: 300;
@@ -85,8 +88,13 @@ body{
 #pause {
   width: 290px;
   height: 290px;
-  margin: 80px 0;
   font-size: 3.25em;
+}
+
+.workout-ended #pause, 
+.workout-ended #prev, 
+.workout-ended #next {
+  visibility: hidden;
 }
 
 .button {
@@ -108,11 +116,12 @@ body{
 }
 
 .button-wrap {
+  flex: 2;
   display: flex; 
   flex-direction: row; 
   align-items: center; 
   justify-content: space-between; 
-  width: 600px;
+  min-width: 600px;
 }
 
 .skip-button {
@@ -121,6 +130,14 @@ body{
   cursor: pointer;
   width: 100px;
   height: 100px;
+}
+
+.close-button-wrap {
+  width: 600px; 
+  padding-top: 20px; 
+  display:flex; 
+  flex-direction: row; 
+  justify-content: flex-end;
 }
 
 .skip-button:focus {
@@ -133,6 +150,12 @@ body{
 
 #next {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23c5c5c5"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+}
+
+#end {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23c5c5c5"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" transform="scale(0.8) translate(3, 3)"/><circle cx="12" cy="12" r="10" stroke="%23c5c5c5" stroke-width="2" fill="none" /><path d="M0 0h24v24H0z" fill="none"/></svg>');
+  width: 50px;
+  height: 50px;
 }
 
 footer {
