--- a/style.css
+++ b/style.css
@@ -42,11 +42,46 @@ body{
 }
 
 .action {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
   background-color: white;
   border-radius: 5px;
   margin-bottom: 40px;
   width: 90%;
   height: 145px;
+  padding: 20px;
+}
+
+.action h2 {
+  font-family: 'Archivo Narrow', sans-serif;
+  font-size: 20px;
+  color: #747474;
+  width: 100%;
+}
+.action span {
+  font-family: 'Telex', sans-serif;
+  text-transform: uppercase;
+  color: #cecece;
+  font-size: 14px;
+  width: 100%;
+}
+
+.start-button {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+}
+
+.start-button button{
+  background-color: #fb5686;
+  padding: 5px;
+  font-size: 14px;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
 }
 
 #timer {
@@ -108,6 +143,7 @@ body{
   border-radius: 50%;
   border: solid 1px white;
   cursor: pointer;
+  outline: none;
 }
 
 .button:hover {
