--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
   border-radius: 5px;
   margin-bottom: 40px;
   width: 90%;
-  height: 145px;
+  min-height: 145px;
   padding: 20px;
 }
 
@@ -67,9 +67,13 @@ body{
   width: 100%;
 }
 
-.start-button {
+.start-button, .view-details-button {
   display: flex;
   flex-direction: row-reverse;
+  width: 100%;
+}
+
+.instruction img {
   width: 100%;
 }
 
