--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body{
   border-radius: 5px;
   margin-bottom: 40px;
   width: 90%;
-  min-height: 145px;
   padding: 20px;
 }
 
@@ -71,6 +70,28 @@ body{
   display: flex;
   flex-direction: row-reverse;
   width: 100%;
+  background: transparent;
+}
+
+.view-details-button {
+  height: 24px;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23c5c5c5"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right;
+  transform: rotateX(0deg);
+  cursor: pointer;
+}
+
+.view-details-button.active {
+  transform: rotateX(180deg);
+}
+
+.instruction {
+  display: none;
+}
+
+.instruction.active {
+  display: block;
 }
 
 .instruction img {
