--- a/style.css
+++ b/style.css
@@ -19,14 +19,27 @@ body{
   align-items: stretch;
 }
 
+.error {
+  display: none;
+}
+
+.error.active {
+  display: block;
+}
+
 .title {
-  margin-top: 60px;
-  margin-left: 5%;
+  padding: 20px 5% 15px 5%;
   color: #fb5686;
+  background-color: white;
 }
 
 .title > * {
   font-weight: 400;
+}
+
+.title > button {
+  display: block;
+  margin: 0 auto;
 }
 
 .exercises {
@@ -66,6 +79,14 @@ body{
   width: 100%;
 }
 
+.action.rest {
+  padding: 5px 20px;
+}
+
+.action.rest h2 {
+  color: #BBBBB6;
+}
+
 .start-button, .view-details-button {
   display: flex;
   flex-direction: row-reverse;
@@ -88,6 +109,7 @@ body{
 
 .instruction {
   display: none;
+  color: #747474;
 }
 
 .instruction.active {
@@ -185,7 +207,7 @@ body{
   min-width: 600px;
 }
 
-.skip-button {
+.control-button {
   background-repeat: no-repeat;
   border: none;
   cursor: pointer;
@@ -198,10 +220,10 @@ body{
   padding-top: 20px; 
   display:flex; 
   flex-direction: row; 
-  justify-content: flex-end;
+  justify-content:space-between;
 }
 
-.skip-button:focus {
+.control-button:focus {
   outline-color: pink;
 }
 
@@ -215,6 +237,12 @@ body{
 
 #end {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23c5c5c5"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" transform="scale(0.8) translate(3, 3)"/><circle cx="12" cy="12" r="10" stroke="%23c5c5c5" stroke-width="2" fill="none" /><path d="M0 0h24v24H0z" fill="none"/></svg>');
+  width: 50px;
+  height: 50px;
+}
+
+#restart {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23c5c5c5"><path d="M14 12c0-1.1-.9-2-2-2s-2 .9-2 2 .9 2 2 2 2-.9 2-2zm-2-9c-4.97 0-9 4.03-9 9H0l4 4 4-4H5c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.51 0-2.91-.49-4.06-1.3l-1.42 1.44C8.04 20.3 9.94 21 12 21c4.97 0 9-4.03 9-9s-4.03-9-9-9z"/></svg>');
   width: 50px;
   height: 50px;
 }
